--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,33 @@
-version: '2'
+version: '3.8'
+
 services:
-  php:
-    image: yiisoftware/yii2-php:7.4-apache
-    volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+  app:
+    build: .
+    container_name: yii2_app
     ports:
-      - '8000:80'
+      - "8000:80"
+    volumes:
+      # Monta toda a raiz do projeto no container
+      - ./:/var/www/html
+    environment:
+      - APACHE_RUN_USER=www-data
+      - APACHE_RUN_GROUP=www-data
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    container_name: yii2_db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root123
+      MYSQL_DATABASE: expense_manager
+      MYSQL_USER: yiiuser
+      MYSQL_PASSWORD: yii7893
+    ports:
+      - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
