--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
         "codeception/module-yii2": "^2.0",
         "codeception/module-filesystem": "^3.0 || ^2.0 || ^1.1",
         "codeception/verify": "^3.0 || ^2.2",
-        "codeception/module-db": "^3.2"
+        "codeception/module-db": "^3.2",
+        "codeception/module-rest": "^3.4",
+        "codeception/module-phpbrowser": "^3.0"
     },
     "config": {
         "allow-plugins": {
